Pokemon: Login and register

--- a/src/app/core/pokemon/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/core/pokemon/components/pokemon-card/pokemon-card.component.html
@@ -3,9 +3,9 @@
     <div class="red-side"></div>
     <div class="white-side"></div>
     <div class="poke-eye">
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="">
+      <img [src]="image" alt="">
     </div>
   </div>
 </div>
-<h3>Pikachu</h3>
+<h3>{{pokemon.name}}</h3>
 
