--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -4,9 +4,9 @@
       <rocket-logo></rocket-logo>
     </div>
     <div class="options">
-      <h3>Pokecardex</h3>
+      <h3>{{user.name}} {{user.lastName}}</h3>
         <div class="avatar">
-          <div>A</div>
+          <div>{{avatar}}</div>
         </div>
     </div>
   </nav>
