--- a/src/app/shared/styles/_colors.scss
+++ b/src/app/shared/styles/_colors.scss
@@ -1,13 +1,17 @@
 // Backgrounds
-$main-back: #f9f5fe;
-$dark-back: #0e0e1b;
-$light-back: #fff;
+$main-back: #111828;
+$dark-back: #020304;
+$light-back: #202938;
 // Colors
-$primary-light: #8139e4;
-$primary-dark: #6527fb;
+$primary-light: #6a72bc;
+$primary-dark: #4d5389;
 $second-light: #fe7300;
 $second-dark: #f04300;
 
 // text
 $contrast-text: #fff;
-$main-text: #333333;
+$main-text: #fff;
+
+
+// Shadow
+$main-shadow:  2px 2px 2px 0px rgb(31, 31, 31);
