--- a/src/app/core/pokemon/pokemon.component.scss
+++ b/src/app/core/pokemon/pokemon.component.scss
@@ -1,14 +1,10 @@
 section {
   .search {
     width: 100%;
-    & input {
-      padding: 10px;
-      width: 100%;
-      border: none;
-      outline: none;
-      border-radius: 8px;
-      background-color: white;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 30px;
   }
   div {
@@ -16,6 +12,7 @@ section {
     max-width: 800px;
     margin: auto;
     display: grid;
+    gap: 30px;
     grid-template-columns: repeat(auto-fit, minmax(195px, 1fr));
     justify-content: space-between;
     justify-items: center;
