--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,29 @@
+@import './app/shared/styles/colors';
+
 /* You can add global styles to this file, and also import other style files */
 * {
   margin: 0;
   padding: 0;
+  color: $main-text;
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.input-control {
+  padding: 10px;
+  outline: none;
+  border: none;
+  border-radius: 8px;
+  color: $main-text;
+  background: $main-back;
+  border: 1px solid rgba(71, 71, 71, 0.2)
+}
+
+.button-control {
+  padding: 10px 20px;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: $primary-light;
 }
