--- a/src/app/core/auth/register/register.component.scss
+++ b/src/app/core/auth/register/register.component.scss
@@ -1,14 +1,23 @@
 @import '../../../shared/styles/colors';
 :host {
-  width: 100%;
+  width: 100% !important;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 form {
+  width: 100%;
   height: 100%;
   display: flex;
   gap: 15px;
   flex-direction: column;
+  .twice-control div{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    input {
+      width: 50%;
+    }
+  }
 }
