--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="options">
       <h3>{{user.name}} {{user.lastName}}</h3>
-        <div class="avatar">
+        <div [class]="'avatar ' + user.team">
           <div>{{avatar}}</div>
         </div>
     </div>
