--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,11 @@
 * {
   margin: 0;
   padding: 0;
-  color: $main-text;
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  h1, h2, h3, label {
+    color: $main-text !important;
+  }
 }
 
 .input-control {
@@ -26,4 +28,13 @@
   outline: none;
   cursor: pointer;
   background: $primary-light;
+}
+
+
+
+// Pagination styles
+
+.ant-pagination-item-link .ant-pagination-item-container{
+  background-color: white !important;
+  color: $main-text !important;
 }
