Pokemon stats Chart

--- a/src/app/core/pokemon/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/core/pokemon/components/pokemon-card/pokemon-card.component.html
@@ -1,4 +1,4 @@
-<div class="pokemon-card">
+<div class="pokemon-card" (click)="navigateRoProfile()">
   <div class="pokeball">
     <div class="red-side"></div>
     <div class="white-side"></div>
