--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -1,6 +1,6 @@
 <main>
   <nav>
-    <div class="logo">
+    <div class="logo" (click)="goToHome()">
       <rocket-logo></rocket-logo>
     </div>
     <div class="options">
