--- a/src/app/core/auth/auth.component.scss
+++ b/src/app/core/auth/auth.component.scss
@@ -1,6 +1,7 @@
 @import '../../shared/styles/colors';
 
 :host {
+  min-height: 90vh;
   height: 100%;
   display: flex;
   justify-content: center;
