Add validation to auth forms

--- a/src/app/core/auth/register/register.component.html
+++ b/src/app/core/auth/register/register.component.html
@@ -15,7 +15,7 @@
     <rocket-input class="twice-control" name="pass" label="Password" >
       <div>
         <input class="input-control" type="password" placeholder="Enter your password" name="password"  formControlName="password">
-        <input class="input-control" type="password" placeholder="Confirm Your password" name="password" formControlName="password">
+        <input class="input-control" type="password" placeholder="Confirm Your password" name="confirmPassword" formControlName="confirmPassword">
       </div>
     </rocket-input>
     <rocket-input name="team" label="Team" >
